--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Next Marvel Films</title>
   </head>
-  <body>
+  <body class="bg-brown">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
